@@ -4,6 +4,11 @@ choose-mirror (0.022) UNRELEASED; urgency=low
     - Updated spanish translation
   * Claus Hindsgaul
     - Update da (Danish) translation.
+  * Denis Barbier
+    - In makeheader.pl, default values for mirror countries were marked
+      as translatable, but the wrong way because msgids were similar to
+      the ones found in Choices fields.  As a result, Default values
+      were translated in the generated templates file.
 
  -- Sebastian Ley <ley@debian.org>  Mon, 10 Nov 2003 10:59:11 +0100
 
